# scanned_document_filer

./: .env.template  .gitignore  LICENSE  README.md  design.md  pyproject.toml
.agent/: instructions.md
llms/: engineering.md  execution.md  pr.md
scripts/: generate_architecture_diagram.py
src/data/: extra_instructions.md  prompt.md
src/docfiler/: api_clients.py  config.py  image_processor.py  vlm_service.py
src/docfiler/cli/: context_generator.py
src/docfiler/gui/: file_viewer.py  main_window.py
src/tests/: test_api_clients.py  test_config.py  test_image_processor.py  test_vlm_service.py
